Make sure body covers entire viewport

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,6 @@
 body {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-content: center;
   justify-content: center;
